# LINK-TRAY

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-database.toml
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/api/: local_server.rs  mod.rs
src-tauri/src/db/: links.rs  migrate.rs  mod.rs  validate.rs
src/app/: App.tsx
src/components/: Home.tsx
src/components/layout/: AppLayout.tsx  Page.tsx  index.ts
src/components/spotlight/: SpotlightResultItem.tsx  SpotlightResults.tsx  SpotlightSearch.tsx  SpotlightShell.tsx  index.ts
src/components/ui/: Heading.tsx  Text.tsx
src/hooks/: useAppInit.ts  useSpotlightSearch.ts
src/lib/: mainWindow.ts  shortcuts.ts  tauri.ts  tray.ts
src/lib/database/: index.ts  linkService.ts  types.ts
src/lib/search/: index.ts  searchLinks.ts
src/lib/spotlight/: index.ts  openLink.ts
